# llm-xml-parser

./: .gitignore  README.md  pyproject.toml
docs/: technical-specs.md
src/core/: parser.py  validator.py
src/llm_xml_parser/core/: lexer.py
src/structures/: config.py
tests/: test_inputs.json  test_parser.py
