[tool.poetry]
name = "xml-parser-llm"
version = "0.1.0"
description = ""
authors = ["edoardoavenia <aveniaedoardo1@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src/llm_xml_parser" }
]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
