[tool.poetry]
name = "xml-parser-llm"
version = "0.1.2"
description = "A minimal XML parser for structured output from LLM"
authors = ["edoardoavenia <aveniaedoardo1@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "llm_xml_parser", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
